# Muses

./: .gitignore  AGENTS.md  CHANGELOG.md  COLLAB_SUMMARY.md  DEPENDENCIES  DESIGN.md  LICENSE  NOTICE  PRD.md  README.md  TECH_DESIGN_0.0.2.md  TECH_PLAN_0.0.2.md
docs/: fft_cross_platform_report.md
integration/: README.md
native/android-visualization/src/main/cpp/: CMakeLists.txt  visualization_jni.cpp
native/core/: CMakeLists.txt  README.md
native/core/Testing/: TEST_PLAN_NATIVE_PACKAGING.md
native/core/include/: audio_engine.h  decoder.h  pcm_ingress.h  pcm_throttler.h  playback_thread.h  visualization_core_stub.h
native/core/scripts/: build_ffmpeg_android.sh  build_ffmpeg_ios.sh
native/core/src/: audio_engine_stub.cpp  decoder_ffmpeg.cpp  decoder_stub.cpp  fft_spectrum.cpp  pcm_ingress.cpp  pcm_throttler.cpp  playback_thread.cpp  visualization_core_stub.cpp
native/core/tests/: audio_engine_test.cpp  fft_compare_main.cpp  fft_spectrum_test.cpp  pcm_ingress_test.cpp  pcm_throttle_test.cpp  playback_thread_test.cpp
native/core/tests/data/: sample.aac
scripts/: check_license.sh
soundwave_player/: 1.txt  Makefile  README.md  pubspec.yaml
stories/: story-01-plugin.md  story-02-core-bootstrap.md  story-03-decode-chain.md  story-04-ringbuffer-playback.md  story-05-dart-state-controller.md  story-06-pcm-throttle.md  story-07-waveform-view.md  story-08-fft-spectrum.md  story-09-local-playback-e2e.md  story-10-streaming.md  story-11-foreground-background.md  story-12-performance-profiling.md  story-13-ci-coverage.md  story-14-doc-demo.md  (+2 more)
(+144 files in other folders)
